--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,8 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "phpcs": "phpcs . --extensions=php --ignore=vendor",
+        "phpcbf": "phpcbf . --extensions=php --ignore=vendor"
     }
 }
