--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
         "facade/ignition": "^1.16.15",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.5.8|^9.3.3",
-        "squizlabs/php_codesniffer": "^3.6"
+        "nunomaduro/collision": "^3.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -57,9 +55,6 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ],
-        "post-install-cmd": [
-            "php artisan optimize"
         ],
         "phpcs": "phpcs . --extensions=php --ignore=vendor",
         "phpcbf": "phpcbf . --extensions=php --ignore=vendor"
